<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/view_dialog_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_text_view_bg"
        android:drawableStart="@drawable/ic_question"
        android:drawablePadding="15dp"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/sure_confirm"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAsk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_dialog_number"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAsk" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:hint="93/4-123-45-67"
        android:inputType="phone"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#9f9b9b"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/view_btn_bg"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:button_duration="250"
        app:button_scale="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhoneNumber" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/btnOk"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/view_btn_bg"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/yes_dialog"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:button_duration="250"
        app:button_scale="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"
        app:layout_constraintTop_toTopOf="@+id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>