<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:background="@drawable/view_dialog_bg"
    android:paddingBottom="15dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_text_view_bg"
        android:drawableStart="@drawable/ic_round_language_24"
        android:drawablePadding="15dp"
        android:fontFamily="@font/roboto_bold"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:paddingBottom="10dp"
        android:text="@string/text_language"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.elasticviews.ElasticCardView
        android:id="@+id/btnLanguageUzb"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#cfcbd1"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_uzb" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAsk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="20dp"
                android:text="@string/text_langUz"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </com.skydoves.elasticviews.ElasticCardView>

    <com.skydoves.elasticviews.ElasticCardView
        android:id="@+id/btnLanguageRu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:cardBackgroundColor="#cfcbd1"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLanguageUzb">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:src="@drawable/ic_rus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="20dp"
                android:text="@string/text_langRu"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </com.skydoves.elasticviews.ElasticCardView>
</androidx.constraintlayout.widget.ConstraintLayout>